@@ -331,9 +331,7 @@ operator|)
 name|reader
 operator|.
 name|termPositions
-argument_list|(
-name|term
-argument_list|)
+argument_list|()
 decl_stmt|;
 name|tp
 operator|.
@@ -347,10 +345,31 @@ operator|.
 name|freqStream
 argument_list|)
 expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|2
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|counter
+operator|=
+literal|0
+expr_stmt|;
 name|tp
 operator|.
-name|next
-argument_list|()
+name|seek
+argument_list|(
+name|term
+argument_list|)
 expr_stmt|;
 name|checkSkipTo
 argument_list|(
@@ -394,6 +413,7 @@ literal|250
 argument_list|)
 expr_stmt|;
 comment|// one skip on level 2
+block|}
 block|}
 DECL|method|checkSkipTo
 specifier|public
